--- a/python/getAppsShort.query.json
+++ b/python/getAppsShort.query.json
@@ -8,6 +8,12 @@ query GetApplications($getApplicationsInput: GetApplicationsInput) {
           tagId
           name
           displayName
+		  isOxTag
         }
-         }}}
-  
+		       }
+    offset
+    total
+    totalFilteredApps
+    totalIrrelevantApps
+  }
+}
