--- a/python/modifyAppsTags.variables.json
+++ b/python/modifyAppsTags.variables.json
@@ -1,1 +1,1 @@
-{"input":{"addedTagsIds":["fa573cdb-b3e1-4c16-be10-fc000a743cad"],"removedTagsIds":[],"appIds":["647669373","585531998"]}}
+{"input":{"addedTagsIds":["01b1f86a-71ca-4755-b6b4-181f47b05969"],"removedTagsIds":[],"appIds":["310663043","715723869","191856056","363001753","335646257","703603930","167596016","672064956","307444027","373373380","179169985","*GitLab-Settings (horty)","354893252","354893981","329712156"]}}
