--- a/python/modifyAppsTags.variables.json
+++ b/python/modifyAppsTags.variables.json
@@ -1,1 +1,1 @@
-{"input":{"addedTagsIds":["01b1f86a-71ca-4755-b6b4-181f47b05969"],"removedTagsIds":[],"appIds":["310663043","715723869","191856056","363001753","335646257","703603930","167596016","672064956","307444027","373373380","179169985","*GitLab-Settings (horty)","354893252","354893981","329712156"]}}
+{"input":{"addedTagsIds":["675e4d28-3e7c-4b6c-8386-5dc22349dd03"],"removedTagsIds":[],"appIds":["803300171"]}}
